# BTP

./: .gitignore  ARCHITECTURE.md  CODE_ANALYSIS_REPORT.md  DEMO_GUIDE.md  DEMO_READY.md  DEPLOYMENT_README.md  DETECTION_VS_TRACKING.md  FIXES_APPLIED.md  GIT_COMMANDS.md  GIT_STATUS.md  MULTI_MISSILE_FIXES.md  MULTI_MISSILE_IMPLEMENTATION.md  MULTI_MISSILE_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  SYSTEM_READY.md  TECHNICAL_REPORT.md  presentation.md  requirements.txt  requirements_windows.txt  run_multi_missile_test.py  run_production.py  run_test.py  test_multi_threat_map_final.html  test_threat_map_final.html  use.md  validate_multi_missile.py  verify_system.py
MDs/: MULTI_MISSILE_GUIDE.md  PRESENTATION_DEMO.md
ros2_ws/src/sensor_drivers/: CMakeLists.txt  README.md  TESTING_GUIDE.md  package.xml  test_enhanced_system.py  test_sensor_pipeline.py  test_usb_webcam.py  validate_code.py
ros2_ws/src/sensor_drivers/include/sensor_drivers/: eo_driver.hpp  hardware_interface.hpp  ir_driver.hpp  ml_detector.hpp
ros2_ws/src/sensor_drivers/launch/: sensor_drivers_launch.py
ros2_ws/src/sensor_drivers/src/: coordinate_transformer.py  enhanced_preprocessing_node.py  eo_camera.cpp  eo_driver.cpp  gis_plotter.py  hardware_interface.cpp  ir_camera_node.cpp  ir_driver.cpp  ml_detector.cpp  preprocessing_node.py  radar_node.cpp  system_monitor.py  threat_detector_node.py  time_sync_monitor.py  ukf_tracker.py  uv_sensor_node.cpp  web_server.py
ros2_ws/src/sensor_drivers/test/: test_full_system.py  test_fusion_engine.py  test_integration.py  test_ukf_tracker.py
ros2_ws/src/threat_detection_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/threat_detection_interfaces/msg/: RadarScan.msg  ThreatDetection.msg
src/: camera_manager.py  coordinate_transformer.py  fusion_engine.py  gis_plotter.py  ir_processor.py  main.py  optical_processor.py  test_camera_manager.py  test_camera_manager_multi.py  test_main.py  ukf_tracker.py  web_server.py
